# StatPlot-MCP

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: sample.csv
docs/: configuration.md  development.md  installation.md  tools.md  usage.md
examples/: client_examples.md
src/statplot/: server.py
