[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statplot-mcp"
version = "0.1.0"
description = "MCP server for statistical plotting from CSV files using pandas, seaborn and matplotlib."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Humberto Varona"}
]
dependencies = [
    "mcp>=1.0.0",
    "pandas>=2.0.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0"
]

[project.scripts]
statplot-mcp = "statplot.server:server.run"

[tool.setuptools.packages.find]
where = ["src"]
